--- a/examples/basic-rest-api/package.json
+++ b/examples/basic-rest-api/package.json
@@ -37,6 +37,7 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.11",
     "@types/node": "18.16.1",
     "nodemon": "3.0.2",
     "prettier": "3.0.0",
